<resources>
    <string name="app_name">Memorya</string>
    <string name="translation">Translation</string>
    <string name="logo_image">Logo Image</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english_word">ENGLISH WORD:</string>
    <string name="translate">TRANSLATE:</string>
    <string name="g_translate">TRANSLATE</string>
    <string name="app_icon">App Icon</string>
    <string name="check_word">CHECK WORD</string>
    <string name="right_translation">Risposta esatta!!</string>
    <string name="wrong_translation">Hai sbagliato, riprova!</string>
    <string name="english">ENGLISH</string>
    <string name="italian">ITALIAN</string>
    <string name="italian_word">ITALIAN WORD:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="all_words">ALL WORDS</string>
    <string name="categories">CATEGORIES</string>
    <string name="category">CATEGORY:</string>
    <string name="correct">correct</string>
    <string name="recent_attempts">Recent attempts:</string>
    <string name="default_category">None</string>
    <string name="update">Update</string>
    <string name="vocabulary_balloon_text">Aggiungi nuove parole al tuo vocabolario personale!</string>
    <string name="translate_balloon_text">Esercitati inserendo la traduzione corretta!</string>
    <string name="check_button_balloon_text">Controlla se la traduzione che hai inserito è corretta!</string>
    <string name="category_balloon_text">Scegli una delle categorie di parole che hai creato all\'interno del vocabolario!</string>
    <string name="add_item_balloon_text">Aggiungi al tuo vocabolario una parola inglese che vuoi imparare e la traduzione italiana che ritieni più opportuna!</string>
    <string name="category_section_balloon_text">Crea una nuova categoria a cui puoi aggiungere le parole del tuo vocabolario</string>
    <string name="translate_button_balloon_text">Non sai bene quale traduzione inserire? Fatti aiutare premendo il bottone di traduzione!</string>
    <string name="play_fragment_tips_shown_key">play_fragment_tips_shown_key</string>
    <string name="vocabulary_words_fragment_tips_shown_key">vocabulary_words_fragment_tips_shown_key</string>
    <string name="vocabulary_categories_fragment_tips_shown_key">vocabulary_categories_fragment_tips_shown_key</string>
    <string name="add_vocabulary_item_tips_shown_key">add_vocabulary_item_tips_shown_key</string>
</resources>