<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addOrEditItemViewModel"
            type="com.example.wordsmemory.vocabulary.addoreditvocabularyitem.AddOrEditVocabularyItemSheetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_word_background"
        tools:context=".vocabulary.addoreditvocabularyitem.AddOrEditVocabularyItemSheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editTextContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/game_background"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <TextView
                android:id="@+id/enWordTitleTextView"
                style="@style/wm_labelStylePhone"
                android:text="@string/english_word"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toTopOf="@+id/itWordEditText"
                app:layout_constraintEnd_toStartOf="@id/enWordEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3" />

            <EditText
                android:id="@+id/enWordEditText"
                style="@style/wm_labelStylePhone"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={addOrEditItemViewModel.enText}"
                app:layout_constraintBottom_toTopOf="@id/itWordEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/enWordTitleTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/itWordTitleTextView"
                style="@style/wm_labelStylePhone"
                android:text="@string/italian_word"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toTopOf="@id/categoryTitleTextView"
                app:layout_constraintEnd_toEndOf="@id/enWordTitleTextView"
                app:layout_constraintStart_toStartOf="@id/enWordTitleTextView"
                app:layout_constraintTop_toBottomOf="@id/enWordTitleTextView"
                app:layout_constraintWidth_percent="0.3" />

            <EditText
                android:id="@+id/itWordEditText"
                style="@style/wm_labelStylePhone"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={addOrEditItemViewModel.itText}"
                app:layout_constraintBottom_toBottomOf="@id/itWordTitleTextView"
                app:layout_constraintEnd_toEndOf="@+id/enWordEditText"
                app:layout_constraintStart_toStartOf="@id/enWordEditText"
                app:layout_constraintTop_toTopOf="@id/itWordTitleTextView"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/categoryTitleTextView"
                style="@style/wm_labelStylePhone"
                android:text="@string/category"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/itWordTitleTextView"
                app:layout_constraintStart_toStartOf="@id/itWordTitleTextView"
                app:layout_constraintTop_toBottomOf="@id/itWordTitleTextView"
                app:layout_constraintWidth_percent="0.3" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/categoryTitleTextView"
                app:layout_constraintEnd_toEndOf="@+id/itWordEditText"
                app:layout_constraintStart_toStartOf="@id/itWordEditText"
                app:layout_constraintTop_toTopOf="@id/categoryTitleTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/addButton"
            style="@style/buttonStylePhone"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:text="@{addOrEditItemViewModel.addButtonText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/googleTranslateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextContainer"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/googleTranslateButton"
            style="@style/buttonStylePhone"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:text="@string/g_translate"
            android:textSize="12sp"
            app:icon="@drawable/baseline_g_translate_white_24"
            app:layout_constraintBottom_toBottomOf="@id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addButton"
            app:layout_constraintTop_toTopOf="@+id/addButton"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>